# codesherpa

./: .gitignore  BLOCKED.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  EVAL_LOG.md  LICENSE  NOTICE  PROGRESS.md  README.md  pyproject.toml
.claude/agents/: verifier.md
.github/workflows/: ci.yml
.repograph/: index.db-shm  index.db-wal
codesherpa/: __init__.py  bench.py  cli.py  gain.py
codesherpa/chunker/: __init__.py  cast.py  dispatch.py  fallback.py  languages.py
codesherpa/contracts/: index_contract.py  retrieval_contract.py  types.py
codesherpa/embed/: __init__.py  engine.py
codesherpa/gitlayer/: __init__.py  ignore.py  initialize.py  lock.py  repo.py  sync.py
codesherpa/graph/: __init__.py  extract.py  gitio.py  index.py  languages.py  recent.py  textutil.py  view.py
codesherpa/graph/queries/: go.scm  proto.scm
codesherpa/mcp_server/: __init__.py  __main__.py  server.py
codesherpa/retrieve/: __init__.py  config.py  evalfactory.py  pack.py  passages.py  rerank.py  retriever.py  router.py  tokens.py  warm.py
codesherpa/store/: __init__.py  schema.sql  sqlite_store.py
eval/: ab_harness.md  ab_tasks.md  ab_tasks_sizly.md  gold_queries.jsonl  golden_replay.py  run_eval.py
repograph/: __init__.py  cli.py
repograph/chunker/: __init__.py  cast.py  dispatch.py  fallback.py  languages.py
repograph/contracts/: __init__.py  index_contract.py  retrieval_contract.py  types.py
repograph/embed/: __init__.py  engine.py
repograph/gitlayer/: __init__.py  ignore.py  initialize.py  repo.py  sync.py
repograph/graph/: __init__.py  extract.py  gitio.py  index.py  languages.py  recent.py  view.py
repograph/graph/queries/: javascript.scm  python.scm  typescript.scm
repograph/mcp_server/: __init__.py  __main__.py  server.py
repograph/retrieve/: __init__.py  config.py  evalfactory.py  fusion.py  pack.py  passages.py  rerank.py  retriever.py  router.py  tokens.py  warm.py
repograph/store/: __init__.py  schema.sql  sqlite_store.py
tests/: bench_indexing.py  conftest.py  inmemory_store.py  mcp_stdio_entry.py  simple_retriever.py  test_chunker_cast.py  test_chunker_fallback.py  test_chunker_go.py  test_chunker_salvage.py  test_cli.py  test_contracts.py  test_embed_cache.py  test_embed_memory.py  test_eval_gate.py  test_evalfactory.py  test_fixture_miniproject.py  test_gain.py  test_gold_queries.py  test_golden.py  test_golden_embeddings.py  test_graph_extract.py  test_graph_extract_go.py  test_graph_facts_cache.py  test_graph_go_fixture.py  test_graph_index.py  test_graph_view.py  test_licensing.py  test_mcp_server.py  test_pack.py  test_passages.py  test_proto_support.py  test_recent_changes.py  test_rerank.py  test_retriever.py  test_router_ranking.py  test_router_tokens.py  test_rrf.py  test_run_eval.py  test_serve_startup.py  test_store.py  (+2 more)
tests/fixtures/: build_miniproject.py
tests/support/: __init__.py  benchmark_models.py  evallib.py  factories.py  gate_report.py  gatelib.py  indexer.py  memstore.py  realstore.py
verification/: bench-graph-cache-report.md  config-mutation-fix-report.md  partial-ast-salvage-report.md  phase-0-report.md  phase-1-report.md  phase-2-report.md  phase-3-report-preintegration.md  phase-3-report.md  phase-4-premerge-report.md  phase-4-report.md  phase-5-report.md  phase-6-report-fail-round.md  phase-6-report.md  phase-A-fix-report.md  phase-A-report.md  phase-gain-report.md  phase6-install-flow.md
verification/ab/: ab-results-v2.md  ab-results.md  sizly-metrics-v2.csv  sizly-metrics.csv
verification/ab/fixture-v2/: M-D1-A.stream.jsonl  M-D1-B.stream.jsonl  M-D2-A.stream.jsonl  M-D2-B.stream.jsonl  summary-A.jsonl  (+17 more)
verification/phase4-smoke/: query1.md  query2.md  query3.md
verification/phase5/: flask-init-and-queries.md  sizly-init-and-queries.md
(+22 files in other folders)
