[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repograph"
version = "0.0.1"
description = "A git-native, self-updating structural memory for your codebase. Index once, stay fresh forever, spend far fewer tokens on context."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "repograph contributors" }]
# NOTE: runtime dependencies are added per phase, when first used, strictly
# from the approved stack in CLAUDE.md §6.
dependencies = [
    "pygit2>=1.15",                    # §6 git access (Phase 1)
    "sqlite-vec>=0.1",                 # §6 storage: vector index (Phase 1 schema, Phase 3 use)
    "tree-sitter>=0.23",               # §6 parsing (Phase 2)
    "tree-sitter-language-pack>=0.7",  # §6 parsing: grammars (Phase 2)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[project.scripts]
repograph = "repograph.cli:main"

[tool.setuptools.packages.find]
include = ["repograph*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
