[build-system]
requires = ["setuptools>=77"]  # >=77 for PEP 639 SPDX license expressions
build-backend = "setuptools.build_meta"

[project]
name = "codesherpa"
version = "0.0.1"
description = "A git-native, self-updating structural memory for your codebase. Index once, stay fresh forever, spend far fewer tokens on context."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "codesherpa contributors" }]
# NOTE: runtime dependencies are added per phase, when first used, strictly
# from the approved stack in CLAUDE.md §6.
# einops: required at model-load time by the remote modeling code of the
# default embedder nomic-embed-text-v1.5 (benchmark winner) — DECISIONS.md.
dependencies = [
    "pygit2>=1.15",                    # §6 git access (Phase 1)
    "sqlite-vec>=0.1",                 # §6 storage: vector index (Phase 1 schema, Phase 3 use)
    "tree-sitter>=0.23",               # §6 parsing (Phase 2)
    "tree-sitter-language-pack>=0.7",  # §6 parsing: grammars (Phase 2, Phase 4 graph queries)
    "mcp>=1.2",                        # §6 MCP SDK (Phase 4)
    "sentence-transformers>=3.0",      # §6 embeddings + CrossEncoder reranker (Phase 3, lazy import)
    "einops>=0.7",                     # required by nomic-embed remote modeling code (Phase 3, D25/D29)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[project.scripts]
sherpa = "codesherpa.cli:main"

[tool.setuptools.packages.find]
include = ["codesherpa*"]

[tool.setuptools.package-data]
"codesherpa.graph" = ["queries/*.scm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
